fix: font-size on mobile and also removed corny post banner

--- a/theme.css
+++ b/theme.css
@@ -11,6 +11,8 @@
   --font: "Liberata", serif;
 }
 
+
+
 body {
   background: var(--bg);
   color: var(--fg-main);
@@ -20,6 +22,12 @@ body {
   margin: 0 auto;
   max-width: var(--max-width);
   padding: 2rem;
+}
+
+@media only screen and (max-width: 600px) {
+    body {
+        font-size: 1rem;
+    }
 }
 
 header {
